syntax = "proto3";

package core;

message RegisterOTAABrokerReq {
    bytes   AppEUI      = 1;
    string  NetAddress  = 2;
}

message RegisterOTAABrokerRes{}

message UpsertABPBrokerReq {
    bytes   AppEUI      = 1;
    bytes   DevAddr     = 2;
    bytes   NwkSKey     = 3;
}

message UpsertABPBrokerRes {}

message BrokerDevice {
    bytes   DevEUI      = 1;
    bytes   DevAddr     = 2;
    bytes   NwkSKey     = 3;
}

message ListDevicesBrokerReq {
    bytes   AppEUI      = 1;
}

message ListDevicesBrokerRes {
    repeated BrokerDevice Devices = 1;
}

service BrokerManager {
    rpc RegisterOTAA    (RegisterOTAABrokerReq)     returns     (RegisterOTAABrokerRes);
    rpc UpsertABP       (UpsertABPBrokerReq)        returns     (UpsertABPBrokerRes);
    rpc ListDevices     (ListDevicesBrokerReq)      returns     (ListDevicesBrokerRes);
}
